--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                     (2011-2015) BACHELOR OF ARTS (THAI), PHANAKHON RAJABHAT UNIVERSITY, BANGKOK THAILAND, GPAX 3.37
                 </p>
                 <p class="about-info">
-                    I'm interested in new work technology and Web-Application design.
-                    Therefore study and learn and always develop myself in UX/UI Design and Front-end developer skills.
-                    If given the opportunity to be part of a leading organization Ready to develop yourself and work with the team to the best of your ability.
+                    I'm interested  Website and Mobile Application Design. Therefore study and learn and always develop myself in UX/UI Design and Website Design skills.
                 </p>
             </div>
         </section>
@@ -121,9 +119,10 @@
         <!-- Skills Section -->
         <section class="section container">
             <h2>Skills</h2>
-            <ul>                
-                <li class="item">Wireframing</li>
-                <li class="item">Web Design</li>
+            <ul>
+                <li class="item">Design System</li>
+                <li class="item">Wireframe & Prototype</li>
+                <li class="item">Web Design Basic</li>
                 <li class="item">Drawing & Painting</li>
                 <li class="item">Proofread</li>
             </ul>
@@ -135,7 +134,7 @@
                 <li class="item">Figma</li>
                 <li class="item">Adobe XD</li>
                 <li class="item">HTML/ CSS</li>
-                <li class="item">Photoshop/ illustrator/ Premiere Pro (Basic)</li>
+                <li class="item">Photoshop/ illustrator (Basic)</li>
                 <li class="item">Procreate</li>
             </ul>
 
