--- a/portfolio-ui.html
+++ b/portfolio-ui.html
@@ -73,6 +73,18 @@
         <section class="section container main"> 
         <div class="ui-menu">
             </div>
+            
+            <div class="ui-list ui-list-01">
+                <img src="./images/ui11-1.jpg" alt="ui-image-11-01">
+                <img src="./images/ui11-2.jpg" alt="ui-image-11-02">
+                <p class="p-project"><strong>[Mock up]</strong> 
+                <span>Nike Girl's Shoes (2022) <span>>></span> 
+                <a href="https://www.figma.com/proto/5q2nTvogTga1K6I9E1VibJ/Ui-Design?node-id=89%3A997&scaling=scale-down&page-id=89%3A996&starting-point-node-id=89%3A997&show-proto-sidebar=1" 
+                   target="_blank" class="click-link">Click</a>
+                   </span>
+                </p>
+            </div>
+            
             <div  class="ui-list">
                 <img src="./images/ui10.png" alt="ui-image-10">
                 <p class="p-project"><strong>[Mock up] </strong>Three App Design (2022)
@@ -129,7 +141,7 @@
                 <p class="p-project"><strong>[Mock up] </strong>Market App Design (2022) </p>
             </div>
             <div class="ui-list">
-                <img src="images/ui-01.png" alt="ui-image-01">
+                <img src="images/ui01.png" alt="ui-image-01">
                 <p class="p-project"><strong>[Mock up] </strong>Mobile T-Shirt App (2022) </p>
             </div>
         </div>
