--- a/portfolio-web.html
+++ b/portfolio-web.html
@@ -77,7 +77,7 @@
         </p>
         <br>
         <p>
-            And My Resume Website
+            And My Portfolio Website
         </p>
     
 </section>
