--- a/my-hobby.html
+++ b/my-hobby.html
@@ -78,7 +78,7 @@
               </ul>
             </div>
 
-            <h4>Line Creator :</h4>
+            <h4>Line Creator</h4>
             <p><strong> Sticker & Emoji >></strong>
                 <a href="https://line.me/S/shop/emoji/author/824268" 
                 target="_blank" 
