--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1 class="name">Woranut <br>
                         Khumpuak
                     </h1>
-                    <h2 class="job">UX/UI DESIGN</h2>
+                    <h2 class="job">UX UI DESIGN</h2>
                 </div>
             </div>
 
