--- a/portfolio-ux.html
+++ b/portfolio-ux.html
@@ -73,30 +73,13 @@
         <section class="section container main"> 
 
             <!-- Background Music -->
-            <h3>Background Music</h3>
-            <div class="container-inline">
-            <h4>[Low-Fidelity Wireframe]</h4>   
-                <ul class="bgm-list">
-                    <li><img src="images/low01.jpg" alt="ux-lofi-01"></li>
-                    <li><img src="./images/low02.jpg" alt="ux-lofi-02"></li>
-                </ul>
-            </div>
+            <p class="p-project"><strong>[Mock up]</strong> 
+                <span>Background Music Mobile Design (2022) <span>>></span> 
+                <a href="https://www.figma.com/file/F42vPMRyVHyqy26cIIo23s/Workshop-Background-Music?node-id=433%3A25699" 
+                target="_blank" class="click-link">Click</a>
+                </span>
+            </p>
 
-            <div class="container-inline">
-            <h4>[Mid-Fidelity Wireframe]</h4>
-                <ul>
-                    <li class="bgm-item-1"><img src="images/mid1.png" alt="ux-high-01"></li>
-                </ul>
-            </div>
-
-            <div class="container-inline">
-                <h4>[High-Fidelity Wireframe]</h4>
-                    <ul>
-                        <li class="bgm-item-1"><img src="images/high1.png" alt="ux-high-02"></li>
-                    </ul>
-            </div>
-
-            <p class="p-project"><strong>[Mock up] </strong>Background Music Mobile App Design (2022) </p>
         </section>
 
         <hr class="section container">
