--- a/portfolio-web.html
+++ b/portfolio-web.html
@@ -69,18 +69,18 @@
             </div>
         </section>
 
-<!-- Website Section -->
-<section class="section container main"> 
-        <p class="p-project"><strong>LYRICS WEBSITE</strong> <span>>></span> 
-            <a href="https://woranut22.github.io/Pink-venom-lyrics.github.io/" target="_blank" class="click-link">https://woranut22.github.io/Pink-venom-lyrics.github.io/</a>
-            </span>
+        <!-- Website Section -->
+        <section class="section container main"> 
+
+        <!-- Project -->
+        <p><strong>[LYRICS WEBSITE]</strong> 
+        <span>Pink-venom-lyrics (2022) <span>>></span> 
+        <a href="https://woranut22.github.io/Pink-venom-lyrics.github.io/" 
+        target="_blank" class="click-link p-project">Click</a>
+        </span>
         </p>
-        <br>
-        <p>
-            And My Portfolio Website
-        </p>
-    
-</section>
+
+        </section>
 
         <hr class="section container">
 
