--- a/portfolio-ui.html
+++ b/portfolio-ui.html
@@ -87,11 +87,11 @@
             
             <div  class="ui-list">
                 <img src="./images/ui10.png" alt="ui-image-10">
-                <p class="p-project"><strong>[Mock up] </strong>Three App Design (2022)
+                <p class="p-project"><strong>[Mock up] </strong>Trees and Plants App Design (2022)
                 <span>>></span> 
                     <a href="https://www.figma.com/proto/XJqRpINa8hkA4ei409A2QR/Design-Systems-(Skills-Test)?node-id=31%3A248&scaling=scale-down&page-id=31%3A247&starting-point-node-id=64%3A2009&hide-ui=1" 
                     target="_blank" 
-                    class="click-link">Design Systems</a>
+                    class="click-link">Click</a>
                     </p>
             </div>
 
