--- a/portfolio-web.html
+++ b/portfolio-web.html
@@ -73,13 +73,13 @@
         <section class="section container main"> 
 
         <!-- Project -->
-        <p><strong>[LYRICS WEBSITE]</strong> 
+        <p class="p-project"><strong>[LYRICS WEBSITE]</strong> 
         <span>Pink-venom-lyrics (2022) <span>>></span> 
         <a href="https://woranut22.github.io/Pink-venom-lyrics.github.io/" 
-        target="_blank" class="click-link p-project">Click</a>
+        target="_blank" class="click-link">Click</a>
         </span>
         </p>
-        <p>And My Portfolio</p>
+        <p class="p-project">And My Portfolio</p>
 
         </section>
 
