--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a href="index.html" class="nav-link link-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="portfolio-ui.html" class="nav-link link-Portfolio">Portfolio</a>
+                            <a href="portfolio-uxui.html" class="nav-link link-Portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a href="my-hobby.html" class="nav-link link-My-Hobby">My Hobby</a>
