--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -51,7 +51,7 @@
             <div class="work-menu">
                 <ul class="work-list">
                     <li class="work-item">
-                        <a class="work-link" href="portfolio-ui.html">
+                        <a class="work-link" href="portfolio-uxui.html">
                             <span class="button-text button-ui">UX/UI DESIGN</span>
                         </a>
                     </li>
