--- a/my-hobby.html
+++ b/my-hobby.html
@@ -50,6 +50,16 @@
             <h2>My Hobby</h2>
         </section>
 
+        <!---------- My Hobby ---------->
+        <section class="section container main"> 
+
+            <p><strong>My Hobby Link</strong> >
+            <a href="https://drive.google.com/drive/folders/1VliMynVhXxIhRiXgNmYx7YIeAiFssxao?usp=sharing" 
+            target="_blank" class="click-link">Click Link</a>
+            </p>
+    
+        </section>
+
         <!-- Follow Me Section -->
         <section class="section container main">
             <h3>FOLLOW ME</h3>
@@ -96,113 +106,6 @@
                 target="_blank" 
                 class="click-link p-project">
                 Click link Theme</a> </p>
-        </section>
-
-        <!---------- Projects ---------->
-
-        <!-- Drawing & Painting -->
-        <section class="section container main">
-            <h3>Drawing & Painting</h3>
-            <h4>Drawing</h4>  
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/drawing-01.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-02.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-03.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-04.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-05.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-06.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-07.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-08.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-09.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-10.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-11.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-12.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-13.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-14.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-15.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-16.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-18.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-19.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-20.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-21.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-22.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-23.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-24.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-25.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-27.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-28.jpg" alt="Drawing & Painting"></li>
-                    <li><img src="images/Hobby/drawing-29.jpg" alt="Drawing & Painting"></li>
-            </div>
-
-            <h4>Painting</h4>
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/paint-01.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-02.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-03.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-04.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-05.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-06.jpg" alt="painting"></li>
-                    <li><img src="images/Hobby/paint-07.jpg" alt="painting"></li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Line Creator -->
-        <section class="section container main"> 
-            <h3>Line Creator "KAEWDRAGON"</h3>   
-            <h4>Sticker & Emoji</h4> 
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/sticker-01.jpg" alt="stickerline"></li>
-                    <li><img src="images/Hobby/sticker-02.jpg" alt="stickerline"></li>
-                    <li><img src="images/Hobby/sticker-03.jpg" alt="stickerline"></li>
-                    <li><img src="images/Hobby/emoji-01.jpg" alt="emojiline"></li>
-                    <li><img src="images/Hobby/emoji-02.jpg" alt="emojiline"></li>
-                </ul>
-            </div>
-
-            <h4>Theme Line</h4>
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/theme-01.jpg" alt="themeline"></li>
-                    <li><img src="images/Hobby/theme-02.jpg" alt="themeline"></li>
-                    <li><img src="images/Hobby/theme-03.jpg" alt="themeline"></li>
-                    <li><img src="images/Hobby/theme-04.jpg" alt="themeline"></li>
-                    <li><img src="images/Hobby/theme-05.jpg" alt="themeline"></li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- ผลงานอื่นๆ -->
-        <section class="section container main"> 
-            <h3>ผลงานอื่นๆ</h3> 
-            <h4>Graphic Design</h4> 
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/graphic-01.jpg" alt="Graphic Design"></li>
-                    <li><img src="images/Hobby/graphic-02.png" alt="Graphic Design"></li>
-                    <li><img src="images/Hobby/graphic-03.jpg" alt="Graphic Design"></li>
-                </ul>
-            </div>
-
-            <h4>รับงานออกแบบภาพวาด</h4> 
-            <div class="container-inline">  
-                <ul class="line-list-01">
-                    <li><img src="images/Hobby/other-01.jpg" alt="freelance"></li>
-                    <li><img src="images/Hobby/other-02.jpg" alt="freelance"></li>
-                    <li><img src="images/Hobby/other-03.jpg" alt="freelance"></li>
-                    <li><img src="images/Hobby/other-04.jpg" alt="freelance"></li>
-                    <li><img src="images/Hobby/other-05.jpg" alt="freelance"></li>
-                </ul>
-            </div>
-
-            <div class="container-inline">  
-                <ul class="line-list-02">
-                    <li><img src="images/Hobby/other-special-01.jpg" alt="freelance"></li>
-                </ul>
-            </div>
         </section>
 
         <hr class="section container">
