--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <section class="section container">
             <h2>Skills</h2>
             <ul>
+                <li class="item">UI Design</li>    
                 <li class="item">Design System</li>                
                 <li class="item">Wireframe & Prototype</li>
                 <li class="item">Web Design Basic</li>
@@ -134,7 +135,7 @@
                 <li class="item">Figma</li>
                 <li class="item">Adobe XD</li>
                 <li class="item">HTML/ CSS</li>
-                <li class="item">Photoshop/ illustrator (Basic)</li>
+                <li class="item">Photoshop/ illustrator</li>
                 <li class="item">Procreate</li>
             </ul>
 
