--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -89,7 +89,7 @@
         <h3>Visual Design</h3>
         <div class="ui-menu">
             </div>
-<!--
+
             <div  class="ui-list">
                 <img src="./images/ui11.jpg" alt="ui-image-11">
                 <p class="p-project">Web Dashboard Design (2022) </p>
@@ -97,7 +97,7 @@
             <div  class="ui-list">
                 <img src="./images/ui10.jpg" alt="ui-image-10">
                 <p class="p-project">Web Dashboard Weather Station (2022) </p>
-            </div> -->
+            </div>
 
             <div class="ui-list ui-list-01">
                 <img src="./images/ui9-1.jpg" alt="ui-image-9-01">
