--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -92,11 +92,11 @@
 
             <div  class="ui-list">
                 <img src="./images/ui11.jpg" alt="ui-image-11">
-                <p class="p-project">Web Dashboard Design (2022) </p>
+                <p class="p-project"><strong>[Mock up]</strong> Web Dashboard Design (2022) </p>
             </div>
             <div  class="ui-list">
                 <img src="./images/ui10.jpg" alt="ui-image-10">
-                <p class="p-project">Web Dashboard Weather Station (2022) </p>
+                <p class="p-project"><strong>[Mock up]</strong> Web Dashboard Weather Station (2022) </p>
             </div>
 
             <div class="ui-list ui-list-01">
