--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -74,16 +74,20 @@
                 target="_blank" class="click-link">Click</a>
                 </span>
             </p>
-
-            <p>UI Design & Prototype >
+            <p class="p-project">UI Design >
                 <a href="https://www.figma.com/proto/F42vPMRyVHyqy26cIIo23s/Workshop-Background-Music?node-id=656%3A24740&scaling=scale-down&page-id=656%3A24215&starting-point-node-id=656%3A24740&hide-ui=1" 
                 target="_blank" class="click-link">Click</a>
             </p>
             
+            <!-- Mobile Banking App -->
+            <p class="p-project"><strong>[Mock up]</strong> 
+                <span>Mobile Banking App Design (2022) >
+                <a href="https://drive.google.com/file/d/18zlCEt0_eDQShUP693M1hrs2OBNNFhRm/view?usp=sharing" 
+                target="_blank" class="click-link">Click</a>
+                </span>
+            </p>
 
         </section>
-
-
 
         <section class="section container main"> 
         <h3>Visual Design</h3>
