--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -69,7 +69,7 @@
             
             <!-- Wireframe MuvMi -->
             <p class="p-project"><strong>[Redesign Website MuvMi]</strong> 
-                <span>ได้ร่วมออกแบบ Wireframe ร่วมกับรุ่นพี่สายงาน UX UI DESIGN (2022) >
+                <span>ได้ช่วยออกแบบ Wireframe ร่วมกับรุ่นพี่สายงาน UX UI DESIGN (2022) >
                 <a href="https://www.figma.com/file/3VM96iEnNXPLIJpMItgVdg/Wireframe-MuvMi?node-id=303%3A2896" 
                 target="_blank" class="click-link">Click</a>
                 </span>
