--- a/portfolio-uxui.html
+++ b/portfolio-uxui.html
@@ -68,12 +68,12 @@
         <section class="section container main"> 
             
             <!-- Redesign Mobile Banking App -->
-            <p class="p-project"><strong>[Mock up]</strong> 
+            <!-- <p class="p-project"><strong>[Mock up]</strong> 
                 <span>Redesign Mobile Banking App (2022) >
                 <a href="https://drive.google.com/file/d/1Ta1O8yEmz8BqvsDvDFH6-eQoTunpNCyT/view?usp=sharing" 
                 target="_blank" class="click-link">Click</a>
                 </span>
-            </p>
+            </p> -->
             
             <!-- Wireframe MuvMi -->
             <p class="p-project"><strong>[Redesign Website MuvMi]</strong> 
